<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/newBlack"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/workingTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingRight="30dp"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingRight="30dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text=""
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:textColor="@color/orange"
            android:onClick="clearOnClick"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/btnParanthese"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:textColor="@color/orange"
            android:onClick="parantheseOnClick"
            android:text="@string/paranthese"/>
        <Button
            android:id="@+id/btnPowerOf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:onClick="exponentOnClick"
            android:text="@string/powerOf"/>
        <Button
            android:id="@+id/btnDevide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:onClick="divideOnClick"
            android:text="@string/devide"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="sevenOnClick"
            android:text="@string/seven"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="eightOnClick"
            android:text="@string/eight"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="nineOnClick"
            android:text="@string/nine"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:onClick="multiplyOnClick"
            android:text="@string/multiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="fourOnClick"
            android:text="@string/four"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="fiveOnClick"
            android:text="@string/five"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="sixOnClick"
            android:text="@string/six"/>
        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:onClick="substractOnClick"
            android:text="@string/substract"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="oneOnClick"
            android:text="@string/one"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="twoOnClick"
            android:text="@string/two"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="threeOnClick"
            android:text="@string/three"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:textColor="@color/orange"
            android:onClick="addOnClick"
            android:text="@string/add"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="pointOnClick"
            android:text="@string/point"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/newBlack"
            android:textSize="16sp"
            android:onClick="zeroOnClick"
            android:text="@string/zero"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:backgroundTint="@color/orange"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:onClick="equalsOnClick"
            android:textSize="24sp"/>
    </LinearLayout>


</LinearLayout>